# subnya-monitor

./: .env  .env.prod  .gitignore  README.md  app.py  app.py.history  bot.py  docker-composer.yml  monitor.txt  pyproject.toml  run.py
.history/: Dockerfile_20230901170625  Dockerfile_20230901170932  docker-composer_20230901170758.yml  docker-composer_20230901170800.yml  docker-composer_20230901170808.yml  docker-composer_20230901170814.yml  docker-composer_20230901170818.yml  docker-composer_20230901170826.yml  docker-composer_20230901170828.yml  docker-composer_20230901170834.yml  docker-composer_20230901170839.yml  docker-composer_20230901170846.yml  docker-composer_20230901170916.yml  docker-composer_20230901170925.yml  docker-composer_20230901170946.yml  docker-composer_20230901171013.yml
app/: .env  app.py  celery.py  config.py  models.py  task.py
app/controller/: api.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tailwind.css  vite.config.js  webpack.config.js
frontend/components/: side.vue
frontend/css/: tailwind.css
frontend/src/: App.vue  main.js
frontend/src/components/: router.js  side.vue  subdomainList.vue
frontend/src/views/: Add.vue  Alert.vue  Home copy.vue  Home.vue  Log.vue  Statistics.vue  Task.vue  Today.vue
src/plugins/monitor/: __init__.py  add.py  get.py
src/util/: subnya.py
static/css/: common.css  domaininfo.css
templates/: base.html  home.html  setting.html  show_text.html  today_task.html
